try to fix non visible gravatar -> picture in bio

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -88,7 +88,8 @@
     }
   
     to {
-      margin-left: auto;
+      margin-left: 0%;
+      margin-right: auto;
       width: 50%;
     }
   }
